close #2  add a function to get columns to query
