# openapi.yaml
@@ -21,7 +21,7 @@ paths:
   /customer_support/creditcard:
     post:
       operationId: cs_cc
-      summary: "Get Credit card fees and customer service phone numbers and other information in Taiwan By institutions. Before ask the function, you should ask function:lists to get official full names"
+      summary: "Get Credit card fees and customer service phone numbers and other information in Taiwan By institutions. Before call the function, you should call function:lists to get official full names and call function:cs_cc_cols to get columns"
       responses:
         "200":
           description: OK
@@ -30,7 +30,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/cs_cc'
       requestBody:
-        description: names of the institutions
+        description: names of the institutions and the column names of /customer_support/creditcard
         content:
           application/json:
             schema:
@@ -42,6 +42,24 @@ paths:
                     type: string
                     description: the official full name
                   description: the official full names of institutions
+                columns:
+                  type: array
+                  items:
+                    type: string
+                    description: the column name of /customer_support/creditcard
+                  description: the list of the column names of /customer_support/creditcard
+  
+  /customer_support/creditcard/columns:
+    post:
+      operationId: cs_cc_cols
+      summary: "Get column names in /customer_support/creditcard"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/cs_cc_cols'
 
   /lists:
     post:
@@ -144,3 +162,9 @@ components:
       items: 
         type: string
         description: The list of official full names with the specific type
+        names:
+    cs_cc_cols:
+      type: array
+      items: 
+        type: string
+        description: The list of the column names of /customer_support/creditcard
